@@ -1,4 +1,9 @@
-2025-10-17  Hanna Knutsson <hanna.knutsson@protonmail.com>
+2026-01-02  Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Do not update properties with default values if description or payee/payer has not been modified (and amount is zero), when editing existing transaction
+	* Fix new tag on Wayland
+
+2025-11-04  Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Automatically increase number of decimals for currencies with exchange rate > €10
 
